--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -4,7 +4,8 @@ metadata:
   name: guestbook-ui
 spec:
   ports:
-  - port: 8080
-    targetPort: 80
+  - name: http
+    port: 8080
+    targetPort: 8080
   selector:
     app: guestbook-ui
